# rdf-mcp

./: brick.py  brickprompt.txt  main.py  pyproject.toml  s223.py  s223prompt.txt  smash.py
