[project]
name = "rdf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "ollama-mcp-client",
    "oxrdflib>=0.4.0",
    "rdflib>=7.1.4",
]

[tool.uv.sources]
ollama-mcp-client = { path = "ollama-mcp-client" }
